--- a/app/src/main/res/layout/fragment_nueva_publicacion.xml
+++ b/app/src/main/res/layout/fragment_nueva_publicacion.xml
@@ -21,19 +21,20 @@
                 android:id="@+id/btnAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
                 android:text="Add"
-                app:layout_constraintBottom_toTopOf="@+id/input_link_new_post"
-                app:layout_constraintStart_toEndOf="@+id/textView_link_new_post"
-                app:layout_constraintTop_toBottomOf="@+id/input_description_new_post" />
+                app:layout_constraintBottom_toTopOf="@+id/textView_tags_new_post"
+                app:layout_constraintStart_toStartOf="@+id/textView_link_new_post"
+                app:layout_constraintTop_toBottomOf="@+id/textView_link_new_post" />
 
             <TextView
                 android:id="@+id/textView_title_new_post"
                 style="@style/Widget.FpShare.TextViewTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/title"
+                app:layout_constraintEnd_toEndOf="@+id/input_title_new_post"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/input_title_new_post"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,71 +91,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/size_16"
+                android:layout_marginBottom="89dp"
                 android:text="@string/link_new_post"
+                app:layout_constraintBottom_toTopOf="@+id/textView_tags_new_post"
                 app:layout_constraintStart_toStartOf="@+id/input_description_new_post"
                 app:layout_constraintTop_toBottomOf="@+id/input_description_new_post" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/input_link_new_post"
-                style="@style/Widget.FpShare.TextInputLayout"
-                android:layout_height="65dp"
-                android:layout_marginTop="@dimen/size_8"
-                android:hint="@string/link_new_post"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView_link_new_post">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/text_link"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
-
-            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:id="@+id/textView_tags_new_post"
                 style="@style/Widget.FpShare.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_16"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="22dp"
+                android:layout_marginBottom="13dp"
                 android:text="@string/tags_new_post"
-                app:layout_constraintStart_toStartOf="@+id/input_link_new_post"
-                app:layout_constraintTop_toBottomOf="@+id/input_link_new_post" />
+                app:layout_constraintBottom_toTopOf="@+id/spinner_cicles_new_post"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
 
-            <RadioGroup
-                android:id="@+id/tags_cicles"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_8"
-                android:orientation="horizontal"
+            <Spinner
+                android:id="@+id/spinner_cicles_new_post"
+                style="@style/Widget.FpShare.Spinner"
+                android:layout_width="299dp"
+                android:layout_height="27dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginEnd="56dp"
+                android:contentDescription="@string/content_description_spinner_modules_new_post"
+                android:spinnerMode="dropdown"
+                app:layout_constraintBottom_toTopOf="@+id/tagModul"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView_tags_new_post">
-
-                <RadioButton
-                    android:id="@+id/option_dam"
-                    style="@style/Widget.FpShare.RadioButton"
-                    android:layout_marginEnd="@dimen/size_16"
-                    android:text="@string/dam_new_post" />
-
-                <RadioButton
-                    android:id="@+id/option_daw"
-                    style="@style/Widget.FpShare.RadioButton"
-                    android:layout_marginEnd="@dimen/size_16"
-                    android:text="@string/daw_new_post" />
-
-                <RadioButton
-                    android:id="@+id/option_asix"
-                    style="@style/Widget.FpShare.RadioButton"
-                    android:layout_marginEnd="@dimen/size_16"
-                    android:text="@string/asix_new_post" />
-
-                <RadioButton
-                    android:id="@+id/option_smix"
-                    style="@style/Widget.FpShare.RadioButton"
-                    android:text="@string/smix__new_post" />
-            </RadioGroup>
+                app:layout_constraintTop_toBottomOf="@+id/textView_tags_new_post"
+                tools:ignore="RedundantDescriptionCheck" />
 
             <Spinner
                 android:id="@+id/spinner_modules_new_post"
@@ -197,11 +166,15 @@
                 android:id="@+id/tagModul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginEnd="286dp"
+                android:layout_marginBottom="16dp"
                 android:text="@string/modules"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="@+id/tags_cicles"
-                app:layout_constraintTop_toBottomOf="@+id/tags_cicles" />
+                app:layout_constraintBottom_toTopOf="@+id/spinner_modules_new_post"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/spinner_cicles_new_post"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_cicles_new_post" />
 
             <TextView
                 android:id="@+id/tagUF"
