Modificaciones archivos strings i dimens

--- a/app/src/main/res/layout/fragment_nueva_publicacion.xml
+++ b/app/src/main/res/layout/fragment_nueva_publicacion.xml
@@ -129,7 +129,7 @@
                 android:id="@+id/spinner_modules_new_post"
                 style="@style/Widget.FpShare.Spinner"
                 android:layout_width="@dimen/size_300"
-                android:layout_height="@dimen/size_70"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/size_16"
                 android:contentDescription="@string/content_description_spinner_modules_new_post"
                 android:spinnerMode="dropdown"
@@ -142,7 +142,7 @@
                 android:id="@+id/spinner_ufs_new_post"
                 style="@style/Widget.FpShare.Spinner"
                 android:layout_width="@dimen/size_300"
-                android:layout_height="@dimen/size_70"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/size_16"
                 android:contentDescription="@string/content_description_spinner_ufs_new_post"
                 android:spinnerMode="dropdown"
@@ -183,7 +183,7 @@
                 android:layout_marginTop="20dp"
                 android:text="@string/ufs"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="@+id/spinner_ufs_new_post"
+                app:layout_constraintStart_toStartOf="@+id/spinner_modules_new_post"
                 app:layout_constraintTop_toBottomOf="@+id/spinner_modules_new_post" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
