--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="size_360">360dp</dimen>
     <dimen name="size_300">300dp</dimen>
+    <dimen name="size_299">299dp</dimen>
     <dimen name="size_272">272dp</dimen>
     <dimen name="size_240">240dp</dimen>
     <dimen name="size_184">184dp</dimen>
@@ -34,6 +35,7 @@
     <dimen name="size_56">56dp</dimen>
     <dimen name="size_55">55dp</dimen>
     <dimen name="size_28">28dp</dimen>
+    <dimen name="size_27">27dp</dimen>
     <dimen name="size_26">26dp</dimen>
     <dimen name="size_18">18dp</dimen>
     <dimen name="size_5">5dp</dimen>
